--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,7 @@
 		<maven.source.plugin>3.0.1</maven.source.plugin>
 		<maven.compiler.plugin>3.6.0</maven.compiler.plugin>
 		<maven.jar.plugin>2.6</maven.jar.plugin>
+		<maven.release.plugin>2.5.3</maven.release.plugin>
 	</properties>
 
 	<licenses>
@@ -35,6 +36,13 @@
 		<developerConnection>scm:git:ssh://github.com:mhagnumdw/jfilehelpers.git</developerConnection>
 		<url>http://github.com/mhagnumdw/jfilehelpers/tree/master</url>
 	</scm>
+	
+	<developers>
+        <developer>
+            <name>Felipe Coury</name>
+            <email>felipe.coury@gmail.com</email>
+        </developer>
+	</developers>
 
 	<dependencies>
 		<dependency>
@@ -101,6 +109,27 @@
 						</goals>
 					</execution>
 				</executions>
+			</plugin>
+
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-release-plugin</artifactId>
+				<version>${maven.release.plugin}</version>
+				<configuration>
+				    <pushChanges>true</pushChanges>
+				</configuration>
+			</plugin>
+		
+			<plugin>
+				<groupId>org.sonatype.plugins</groupId>
+				<artifactId>nexus-staging-maven-plugin</artifactId>
+				<version>1.6.7</version>
+				<extensions>true</extensions>
+				<configuration>
+					<serverId>ossrh</serverId>
+					<nexusUrl>https://oss.sonatype.org/</nexusUrl>
+					<autoReleaseAfterClose>true</autoReleaseAfterClose>
+				</configuration>
 			</plugin>
 
 		</plugins>
